RS #306 - Refactoring LoginLayout; Refactoring auth-login

--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -80,7 +80,7 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
   .slot-container {
     bottom: 0;
     flex-direction: column;
-    margin: 50px 0;
+    margin: 60px 0 80px 0;
     position: absolute;
     top: 0;
     width: 100%;
@@ -89,10 +89,9 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
   header {
     align-items: center;
     background-color: var(--backgroundColor);
-    border-bottom: 1px solid var(--textColor);
     box-sizing: border-box;
     display: flex;
-    height: 50px;
+    height: 60px;
     justify-content: space-between;
     padding: 0 40px;
     position: fixed;
@@ -103,10 +102,9 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
   footer {
     align-items: center;
     background-color: var(--backgroundColor);
-    border-top: 1px solid var(--textColor);
     bottom: 0;
     display: flex;
-    height: 50px;
+    height: 80px;
     justify-content: space-between;
     padding: 0 40px;
     position: fixed;
@@ -159,4 +157,4 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
     width: 45px;
     height: 45px;
   }
-</style>../branding/Header
+</style>
