RS #306 - Refactoring HeaderLayout/LoginLayout to use shared elements

--- a/src/layouts/login/LoginLayout.astro
+++ b/src/layouts/login/LoginLayout.astro
@@ -1,10 +1,7 @@
 ---
-import { getLangFromUrl } from '@i18n';
-import config from 'src/config.json';
 import Footer from '../../branding/Footer';
-import Header from '../../branding/Header';
-
-import '@themes/default/index.css';
+import HeaderLayout from '../HeaderLayout.astro';
+import config from '../../config.json';
 
 export interface Props {
   title: string;
@@ -12,134 +9,37 @@ export interface Props {
 
 const { title } = Astro.props;
 
+const backgroundColor = config.branding.background_color;
 const message = config.branding.footer_message;
-const siteColor = config.branding.site_color;
+const splashURL = config.branding.home_banner;
 const textColor = config.branding.contrast_color;
 const useFooter = config.branding.bottom_logos_enabled;
-const useHeader = config.branding.top_logos_enabled;
-const backgroundColor = config.branding.background_color;
-const splashURL = config.branding.home_banner;
-
-const favicon = `/${config.branding.favicon}` || '/favicon.svg';
 ---
 
-<!doctype html>
-<html lang={getLangFromUrl(Astro.url)}>
-<head>
-  <!-- HEAD-DYNAMIC-SCRIPT -->
-  <meta charset='UTF-8' />
-  <meta name='viewport' content='width=device-width, initial-scale=1' />
-  <meta name='generator' content={Astro.generator} />
-  <link rel='icon' type='image/x-icon' href={favicon} />
-  <title>{title}</title>
-</head>
-<body>
-<header>
-  <div class='branding-container'>
-    <img src='/img/recogito-studio-logo.svg' height={40} />
-    <div class='separator'></div>
-    <div class='site_name'>{config.branding.site_name}</div>
-  </div>
-  <div class='bottom_links'>
-    {useHeader && <Header contrastColor={textColor} />}
-  </div>
-</header>
-<div class='container'>
-  <div class='slot-container'>
-    <div style={{ flexGrow: '1' }}>
-      <slot />
+<HeaderLayout footer={false} title={title}>
+  <div class='container'>
+    <div class='slot-container'>
+      <div style={{ flexGrow: '1' }}>
+        <slot />
+      </div>
+      <footer>
+        <div class='blurb'>
+          {message || ''}
+        </div>
+        <div class='bottom_links'>
+          {useFooter && <Footer contrastColor={textColor} />}
+        </div>
+      </footer>
     </div>
-    <footer>
-      <div class='blurb'>
-        {message || ''}
-      </div>
-      <div class='bottom_links'>
-        {useFooter && <Footer contrastColor={textColor} />}
-      </div>
-    </footer>
+    <div class='img-container'>
+      <img class='banner-img' src={splashURL} />
+    </div>
   </div>
-  <div class='img-container'>
-    <img class='banner-img' src={splashURL} />
-  </div>
-</div>
-<script>
-  // @ts-ignore
-  window.onUsersnapLoad = function (api: any) {
-    api.init();
-    api.show(import.meta.env.PUBLIC_USERSNAP_PROJECT_API_KEY);
-  };
+</HeaderLayout>
 
-  var script = document.createElement('script');
-  // @ts-ignore
-  script.defer = 1;
-  script.src = `https://widget.usersnap.com/global/load/${
-    import.meta.env.PUBLIC_USERSNAP_GLOBAL_API_KEY
-  }?onload=onUsersnapLoad`;
-
-  document.getElementsByTagName('head')[0].appendChild(script);
-</script>
-</body>
-</html>
-<style define:vars={{ siteColor, backgroundColor, textColor }}>
+<style define:vars={{ backgroundColor, textColor }}>
   body {
-    height: 100%;
     overflow: hidden;
-  }
-
-  .slot-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-basis: 40%;
-  }
-
-  header {
-    align-items: center;
-    background-color: var(--backgroundColor);
-    box-sizing: border-box;
-    display: flex;
-    height: 60px;
-    justify-content: space-between;
-    padding: 0 40px;
-    width: 100%;
-    z-index: 9999;
-  }
-
-  footer {
-    align-items: center;
-    background-color: var(--backgroundColor);
-    display: flex;
-    height: 80px;
-    justify-content: space-between;
-    padding: 0 40px;
-    z-index: 1000;
-  }
-
-  .branding-container {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-  }
-
-  .platform {
-    color: var(--textColor);
-  }
-
-  .separator {
-    width: 2px;
-    height: 20px;
-    margin-left: 5px;
-    background-color: var(--textColor);
-  }
-
-  .site_name {
-    padding-left: 5px;
-    color: var(--textColor);
-    opacity: 0.8;
-    font-size: 12px;
-    padding-top: 4px;
-    text-transform: uppercase;
-    font-weight: 600;
   }
 
   .blurb {
@@ -147,19 +47,11 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
     font-size: 14px;
   }
 
-  .top_links {
-    display: flex;
-    flex-direction: row;
-  }
-
-  .bottom_links {
-    display: flex;
-    flex-direction: row;
-  }
-
-  .link {
-    width: 45px;
-    height: 45px;
+  .banner-img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
   }
 
   .container {
@@ -172,10 +64,20 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
     height: 100%;
   }
 
-  .banner-img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+  .slot-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    min-height: calc(100vh - 100px);
+  }
+
+  footer {
+    align-items: center;
+    background-color: var(--backgroundColor);
+    display: flex;
+    height: 80px;
+    justify-content: space-between;
+    padding: 0 40px;
+    z-index: 1000;
   }
 </style>
