--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -10,7 +10,7 @@ export interface Props {
   title: string;
 }
 
-const { title } = Astro.props;
+const { title, footer = true } = Astro.props;
 
 const message = config.branding.footer_message;
 const siteColor = config.branding.site_color;
@@ -39,21 +39,23 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
         <div class='separator'></div>
         <div class='site_name'>{config.branding.site_name}</div>
       </div>
-      <div class='bottom_links'>
+      <div class='top_links'>
         {useHeader && <Header contrastColor={textColor} />}
       </div>
     </header>
     <div class='slot-container'>
       <slot />
     </div>
-    <footer>
-      <div class='blurb'>
-        {message || ''}
-      </div>
-      <div class='bottom_links'>
-        {useFooter && <Footer contrastColor={textColor} />}
-      </div>
-    </footer>
+    { footer && (
+      <footer class='footer'>
+        <div class='blurb'>
+          {message || ''}
+        </div>
+        <div class='bottom_links'>
+          {useFooter && <Footer contrastColor={textColor} />}
+        </div>
+      </footer>
+    )}
     <script>
       // @ts-ignore
       window.onUsersnapLoad = function (api: any) {
@@ -131,7 +133,7 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
 
   .site_name {
     padding-left: 5px;
-    color: var(--siteColor);
+    color: var(--textColor);
     opacity: 0.8;
     font-size: 12px;
     padding-top: 4px;
