RS #306 - Updating login button styles

--- a/src/apps/auth-login/Login.css
+++ b/src/apps/auth-login/Login.css
@@ -59,6 +59,10 @@ h2 {
   margin-top: 1em;
 }
 
+.login button:not(.primary) {
+  background-color: white;
+}
+
 .login-separator {
   display: flex;
   flex-direction: row;
