--- a/src/apps/auth-login/Login.css
+++ b/src/apps/auth-login/Login.css
@@ -20,16 +20,9 @@
 
 .login {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   height: 100%;
   width: 100%;
-}
-
-main {
-  padding-left: 70px;
-  padding-right: 100px;
-  width: 100%;
-  height: 100%;
 }
 
 h1 {
@@ -39,7 +32,7 @@ h1 {
 
 h2 {
   color: #747577;
-  margin: 0.5em 0 2em 0;
+  margin: 0 0 2em 0;
 }
 
 .login .error,
