--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -1,22 +1,18 @@
 ---
-import { getLangFromUrl } from '@i18n';
-import config from 'src/config.json';
-import Footer from '../branding/Footer';
-import Header from '../branding/Header';
-
+import { BrandFooter, BrandHeader } from '@components/Branding';
+import { getLangFromUrl, getTranslations } from '@i18n';
 import '@themes/default/index.css';
+import config from 'src/config.json';
 
 export interface Props {
   title: string;
 }
 
 const { title, footer = true } = Astro.props;
+const i18n = getTranslations(Astro.request, 'branding');
 
-const message = config.branding.footer_message;
 const siteColor = config.branding.site_color;
 const textColor = config.branding.contrast_color;
-const useFooter = config.branding.bottom_logos_enabled;
-const useHeader = config.branding.top_logos_enabled;
 const backgroundColor = config.branding.background_color;
 
 const favicon = `/${config.branding.favicon}` || '/favicon.svg';
@@ -33,28 +29,12 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
     <title>{title}</title>
   </head>
   <body>
-    <header>
-      <div class='branding-container'>
-        <img src='/img/recogito-studio-logo.svg' height={40} />
-        <div class='separator'></div>
-        <div class='site_name'>{config.branding.site_name}</div>
-      </div>
-      <div class='top_links'>
-        {useHeader && <Header contrastColor={textColor} />}
-      </div>
-    </header>
+    <BrandHeader />
     <div class='slot-container'>
       <slot />
     </div>
     { footer && (
-      <footer class='footer'>
-        <div class='blurb'>
-          {message || ''}
-        </div>
-        <div class='bottom_links'>
-          {useFooter && <Footer contrastColor={textColor} />}
-        </div>
-      </footer>
+      <BrandFooter i18n={i18n} />
     )}
     <script>
       // @ts-ignore
@@ -88,6 +68,19 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
     width: 100%;
   }
 
+  footer {
+    align-items: center;
+    background-color: var(--backgroundColor);
+    bottom: 0;
+    color: var(--textColor);
+    display: flex;
+    height: 80px;
+    justify-content: space-between;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+  }
+
   header {
     align-items: center;
     background-color: var(--backgroundColor);
@@ -99,64 +92,5 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
     position: fixed;
     width: 100%;
     z-index: 9999;
-  }
-
-  footer {
-    align-items: center;
-    background-color: var(--backgroundColor);
-    bottom: 0;
-    display: flex;
-    height: 80px;
-    justify-content: space-between;
-    padding: 0 40px;
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
-  }
-
-  .branding-container {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-  }
-
-  .platform {
-    color: var(--textColor);
-  }
-
-  .separator {
-    width: 2px;
-    height: 20px;
-    margin-left: 5px;
-    background-color: var(--textColor);
-  }
-
-  .site_name {
-    padding-left: 5px;
-    color: var(--textColor);
-    opacity: 0.8;
-    font-size: 12px;
-    padding-top: 4px;
-    text-transform: uppercase;
-    font-weight: 600;
-  }
-
-  .blurb {
-    color: var(--textColor);
-    font-size: 14px;
-  }
-
-  .top_links {
-    display: flex;
-    flex-direction: row;
-  }
-  .bottom_links {
-    display: flex;
-    flex-direction: row;
-  }
-
-  .link {
-    width: 45px;
-    height: 45px;
   }
 </style>
