RS #306 - Adding login form/input styles

--- a/src/layouts/login/LoginLayout.astro
+++ b/src/layouts/login/LoginLayout.astro
@@ -4,6 +4,7 @@ import { Logo } from '@components/Logo';
 import { getTranslations } from '@i18n';
 import HeaderLayout from '@layouts/HeaderLayout.astro';
 import config from 'src/config.json';
+import '@themes/login/index.css';
 
 export interface Props {
   title: string;
