--- a/src/pages/[lang]/reset-password.astro
+++ b/src/pages/[lang]/reset-password.astro
@@ -2,6 +2,7 @@
 import BaseLayout from '@layouts/BaseLayout.astro';
 import { ResetPassword as ResetPasswordComponent } from '@apps/auth-reset-password';
 import { getTranslations } from '@i18n';
+import '@themes/login/index.css';
 ---
 
 <BaseLayout title='Recogito | Reset Password'>
