--- a/src/pages/[lang]/forgot-password.astro
+++ b/src/pages/[lang]/forgot-password.astro
@@ -2,6 +2,7 @@
 import BaseLayout from '@layouts/BaseLayout.astro';
 import { ForgotPassword as ForgotPasswordComponent } from '@apps/auth-forgot-password';
 import { getTranslations } from '@i18n';
+import '@themes/login/index.css';
 ---
 <BaseLayout title="Recogito | Forgot Password">
   <div class="container">
