--- a/src/pages/[lang]/sign-in.astro
+++ b/src/pages/[lang]/sign-in.astro
@@ -14,4 +14,4 @@ const methods = config.authentication.methods;
     i18n={getTranslations(Astro.request, 'auth-login')}
     methods={methods as LoginMethod[]}
   />
-</LoginLayout>;
+</LoginLayout>
