--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -81,17 +81,13 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
     height: 60px;
     justify-content: space-between;
     padding: 0 40px;
-    position: fixed;
     width: 100%;
     z-index: 9999;
   }
 
   .slot-container {
-    bottom: 0;
     flex-direction: column;
-    margin: 60px 0 80px 0;
-    position: absolute;
-    top: 0;
+    margin: 0;
     width: 100%;
   }
 </style>
