#306 - Removing existing RecogitoLogo and RecogitoCircleLogo; Renaming Logo component to RecogitoLogo

--- a/src/layouts/login/LoginLayout.astro
+++ b/src/layouts/login/LoginLayout.astro
@@ -1,6 +1,6 @@
 ---
 import { BrandFooter } from '@components/Branding/BrandFooter';
-import { Logo } from '@components/Logo';
+import { RecogitoLogo } from '@components/RecogitoLogo';
 import { getTranslations } from '@i18n';
 import HeaderLayout from '@layouts/HeaderLayout.astro';
 import config from 'src/config.json';
