#306 - Adding gray background to "img-container" class as a placeholder while image is loading

--- a/src/layouts/login/LoginLayout.astro
+++ b/src/layouts/login/LoginLayout.astro
@@ -92,6 +92,7 @@ const useFooter = config.branding.bottom_logos_enabled;
   }
 
   .img-container {
+    background-color: var(--gray-200);
     flex-basis: 65%;
     overflow: hidden;
   }
