Refactoring/bugfix: unread notes

--- a/src/pages/[lang]/projects/[project]/index.astro
+++ b/src/pages/[lang]/projects/[project]/index.astro
@@ -40,7 +40,7 @@ if (project.error || !project.data) {
   });
 }
 
-console.log('Project: ', project.data);
+// console.log('Project: ', project.data);
 
 const user = project.data.users.find((u) => u.user.id === profile.data.id);
 
