--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -25,7 +25,7 @@ if (!projects.data || !invitations.data) {
   return new Response(error.body, { headers: error.headers, status: 500 });
 }
 
-console.log(projects.data);
+//console.log(projects.data);
 ---
 
 <BaseLayout title='Dashboard'>
