--- a/src/components/Annotation/LayerIcon.css
+++ b/src/components/Annotation/LayerIcon.css
@@ -4,6 +4,7 @@
   border-radius: 50%;
   display: flex;
   height: 30px;
+  justify-content: center;
   width: 30px;
 }
 
@@ -14,4 +15,9 @@
 .annotation .layer-icon svg {
   display: block;
   margin: 1px 0 0 0;
+}
+
+.r6o-popup-sr-only:focus,
+.r6o-popup-sr-only:active {
+  clip: rect(0, 0, 0, 0) !important;
 }
