Better messaging on team assignment wizard

--- a/src/apps/project-home/AssignmentsView/Wizard/AssignmentWizard.css
+++ b/src/apps/project-home/AssignmentsView/Wizard/AssignmentWizard.css
@@ -88,3 +88,7 @@
 .assignment-wizard .tabs-content p.hint.warn {
   color: var(--red-500);
 }
+
+.assignment-wizard .tabs-content p.hint.check {
+  color: var(--orange);
+}
