Revert "Library updates"
This reverts commit 0a1cd29f5b6d0682f803a1979aa6ab99c9e3ce7c.

--- a/src/components/AnnotationDesktop/AnnotationPopup/AnnotationPopup.css
+++ b/src/components/AnnotationDesktop/AnnotationPopup/AnnotationPopup.css
@@ -1,6 +1,4 @@
-.annotation-popup,
-.r6o-popup,
-.a9s-popup {
+.annotation-popup {
   animation: popupFadeIn 200ms ease-in;
   border-radius: 5px;
   box-shadow:
