--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -43,6 +43,10 @@ html, body {
   justify-content: flex-end;
 }
 
+.ta-desktop main .ta-annotated-text-container.read-only ::selection {
+  background-color: rgba(0, 0, 0, 0.08);
+}
+
 .ta-desktop main .ta-annotated-text-container .page-wrapper {
   background-color: #fff;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.34), 0 0 16px -8px rgba(0, 0, 0, 0.18);
