#86 - Updating RightDrawer component to include "defaultTab" prop; Updating TextAnnotationDesktop and ImageAnnotationDesktop components to set "defaultTab"

--- a/src/apps/project-settings/ProjectSettings.css
+++ b/src/apps/project-settings/ProjectSettings.css
@@ -357,3 +357,9 @@
   align-items: center;
   justify-content: space-around;
 }
+
+.project-settings-documents-view {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
