--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,6 +2,10 @@ button.busy > * {
   opacity: 0;
 }
 
+button.busy > svg:last-child {
+  margin-right: auto;
+}
+
 button.busy .confetti {
   opacity: 1;
 }
