85 - Adding icon for drag/drop handle

--- a/src/components/DocumentCard/DocumentCard.css
+++ b/src/components/DocumentCard/DocumentCard.css
@@ -66,3 +66,19 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
 }
+
+.document-card-container.active {
+  opacity: 0.5;
+}
+
+.document-card-container > .document-card > .document-drag-handle {
+  background-color: var(--gray-100);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: grab;
+}
+
+.document-card-container.dragging > .document-card > .document-drag-handle {
+  cursor: grabbing;
+}
